# safeVision

./: AES_1.py  CMakeLists.txt  Diffie_hellman_code.py  README.md  aes.cpp  aes_gcm.cpp  best_model.pth  gcm.cpp  gcm.exp  gcm.lib  gcm.py  gcm_lib.pyd  links.txt  requirements.txt  setup.py
camera/: SecureVideoStreamWithDH.py  camera.py  client.py  config.py  const.py  protocol.py  utils.py
encryption/: CMakeLists.txt  HMAC.cpp  aes.cpp  gcm.cpp
encyption/: aes.cpp  aes.h  gcm.cpp  gcm_lib.pyd
runs/safevision/: events.out.tfevents.1772790131.DESKTOP-JL284RC.1692.0
safevision_crypto.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
server/: SecureVideoStreamWithDH.py  config.py  dataset_builder.py  gcm_lib.pyd  lstm_model.py  model.py  ntu_dataset.py  server.py  training.py  vision.py
server/model/: best_model.pth  lstm_model.py  rwf_2000.py  rwf_2000_dataset_builder.py  training.py  vision.py
server/processed_data/: y_0.npy  y_1.npy  y_10.npy  y_100.npy  y_101.npy  y_102.npy  y_103.npy  y_104.npy  y_105.npy  y_106.npy  y_107.npy  y_108.npy  y_109.npy  y_11.npy  y_110.npy  y_111.npy  y_112.npy  y_113.npy  y_114.npy  y_115.npy  y_116.npy  y_117.npy  y_118.npy  y_119.npy  y_12.npy  y_120.npy  y_121.npy  y_122.npy  y_123.npy  y_124.npy  y_125.npy  y_126.npy  y_127.npy  y_128.npy  y_129.npy  y_13.npy  y_130.npy  y_131.npy  y_132.npy  y_133.npy  (+139 more)
server/runs/safevision/: events.out.tfevents.1772379319.DESKTOP-JL284RC.13020.0  events.out.tfevents.1772379341.DESKTOP-JL284RC.4248.0  events.out.tfevents.1772526551.DESKTOP-JL284RC.2872.0  (+15 more)
(+2 files in other folders)
